--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@sil/storage": "^0.0.7",
@@ -19,6 +20,7 @@
     "sass": "^1.70.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
+    "vitest": "^1.2.2",
     "vue-tsc": "^1.8.27"
   }
 }
